--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
-node_modules
-.gitignore
+# Node modules
+node_modules/
+
+# Environment variables
 .env
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS generated files
+.DS_Store
+Thumbs.db
