docs: adicionando instruções de implementação

--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 PORT=3000
-WHATSAPP_API_URL=https://api.whatsapp.com
+WHATSAPP_API_URL=https://graph.facebook.com/v14.0
+WHATSAPP_API_KEY=sua-chave-api-aqui
+WHATSAPP_PHONE_NUMBER_ID=seu-phone-number-id
+WEBHOOK_URL=http://seu-dominio.com/webhook  
+
+# Falta apenas finalizar o .env e implementar no whatsapp
